# Website-V2

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/: CNAME  base.html  index.html  programming.html
docs/static/: main.css
sass/: _base.scss  _helper.scss  _home.scss  _palette.scss  _repo.scss  main.scss
templates/: base.html  index.html  music.html  programming.html
website/: __main__.py  folders.py  repos.py  style.py  templates.py
